Update Extra Data Evaluation Algorithm.ipynb
submission info added

--- a/data/Extra Data/Extra Data Evaluation Algorithm.ipynb
+++ b/data/Extra Data/Extra Data Evaluation Algorithm.ipynb
@@ -15,10 +15,10 @@
     "import random \n",
     "\n",
     "# Load the submitted codes\n",
-    "import submission_c0 as c0 # Cristin's algorithm\n",
-    "import submission_c1 as c1 # Cristin's algorithm\n",
-    "import submission_j0 as j0 # John's algorithm\n",
-    "import submission_j1 as j1 # John's algorithm\n"
+    "import submission_c0 as c0 # Cristin's algorithm 2020-01-23 12:24:41.577445+00:00 \n",
+    "import submission_c1 as c1 # Cristin's algorithm 2020-01-22 04:42:14.732860+00:00\n",
+    "import submission_j0 as j0 # John's algorithm 2020-02-05 15:07:31.838107+00:00\n",
+    "import submission_j1 as j1 # John's algorithm 2020-01-14 07:31:21.625687+00:00\n"
    ]
   },
   {
