final evaluation files

--- a/data/final_phase_data/evaluation.ipynb
+++ b/data/final_phase_data/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,20 +15,23 @@
     "import random \n",
     "\n",
     "# Load the submitted codes\n",
-    "import submission_c0 as c0 # Cristin's algorithm\n",
-    "import submission_c1 as c1 # Cristin's algorithm\n",
-    "import submission_j0 as j0 # John's algorithm\n",
-    "import submission_j1 as j1 # John's algorithm\n"
+    "import submission_c0 as c0 # Cristin's algorithm 2020-01-23 12:24:41.577445+00:00 \n",
+    "import submission_c1 as c1 # Cristin's algorithm 2020-01-22 04:42:14.732860+00:00\n",
+    "import submission_c2 as c2 # Cristin's algorithm 2020-01-13 08:56:25.225607+00:00\n",
+    "import submission_j0 as j0 # John's algorithm 2020-02-05 15:07:31.838107+00:00\n",
+    "import submission_j1 as j1 # John's algorithm 2020-01-12 14:20:58.777744+00:00\n",
+    "\n",
+    "# Submissions are sorted from the most recent to least"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def slide_window(target,algs,window=5): # sample 5 subsets from the dataset and test the algorithms\n",
+    "def evaluate(target,algs,window=5): # sample 5 subsets from the dataset and test the algorithms\n",
     "    source_dir=\"./public_dat/\"+str(target)+\"/\"\n",
     "    try:\n",
     "        os.mkdir('./sliding_window/')\n",
@@ -94,25 +97,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.9175, 1.    ])"
+       "array([0.8975 , 1.     , 0.92625])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "algs=[c0.predictor,c1.predictor]\n",
+    "algs=[c0.predictor,c1.predictor,c2.predictor]\n",
     "scores_cristin_seal=np.zeros(len(algs))\n",
     "for i in range(100):\n",
-    "    scores_cristin_seal+=slide_window(\"10\",algs)\n",
+    "    scores_cristin_seal+=evaluate(\"10\",algs)\n",
     "scores_cristin_seal/=np.ones(len(algs))*100\n",
     "scores_cristin_seal"
    ]
@@ -126,26 +129,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1., 0.])"
+       "array([1., 0., 1.])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "algs=[c0.predictor,c1.predictor]\n",
+    "algs=[c0.predictor,c1.predictor,c2.predictor]\n",
     "scores_cristin_drone=np.zeros(len(algs))\n",
-    "for i in range(100):\n",
-    "    scores_cristin_drone+=slide_window(\"11\",algs)\n",
-    "scores_cristin_drone/=np.ones(len(algs))*100\n",
+    "for i,alg in enumerate(algs):\n",
+    "    scores_cristin_drone[i]=alg(\"public_dat/11/\")\n",
     "scores_cristin_drone=np.ones(len(algs))-scores_cristin_drone\n",
     "scores_cristin_drone"
    ]
@@ -173,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.17625, 0.70125])"
+       "array([0.17125, 0.7025 ])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +193,7 @@
     "algs=[j0.predictor,j1.predictor]\n",
     "scores_john_seal=np.zeros(len(algs))\n",
     "for i in range(100):\n",
-    "    scores_john_seal+=slide_window(\"10\",algs)\n",
+    "    scores_john_seal+=evaluate(\"10\",algs)\n",
     "scores_john_seal/=np.ones(len(algs))*100\n",
     "scores_john_seal    "
    ]
@@ -205,16 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.97, 0.34])"
+       "array([1., 0.])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,9 +224,9 @@
    "source": [
     "algs=[j0.predictor,j1.predictor]\n",
     "scores_john_drone=np.zeros(len(algs))\n",
-    "for i in range(100):\n",
-    "    scores_john_drone+=slide_window(\"11\",algs)\n",
-    "scores_john_drone/=np.ones(len(algs))*100\n",
+    "for i,alg in enumerate(algs):\n",
+    "    scores_john_drone[i]=alg(\"public_dat/11/\")\n",
+    "    \n",
     "scores_john_drone=np.ones(len(algs))-scores_john_drone\n",
     "scores_john_drone"
    ]
@@ -238,18 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 57,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average score \n",
-      "John: 0.546875\n",
-      "Cristin: 0.729375\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -282,54 +277,64 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.970</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.17625</td>\n",
-       "      <td>0.91750</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.17125</td>\n",
+       "      <td>0.89750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.340</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.70125</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.7025</td>\n",
        "      <td>1.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-</td>\n",
+       "      <td>0.92625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
        "      <td>average</td>\n",
-       "      <td>0.655</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.43875</td>\n",
-       "      <td>0.95875</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.436875</td>\n",
+       "      <td>0.94125</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  submission  john drone   Cristin drone   john seal   Cristin seal \n",
-       "0          0        0.970             1.0     0.17625        0.91750\n",
-       "1          1        0.340             0.0     0.70125        1.00000\n",
-       "2    average        0.655             0.5     0.43875        0.95875"
+       "  submission john drone   Cristin drone  john seal   Cristin seal \n",
+       "0          0         1.0        1.000000    0.17125        0.89750\n",
+       "1          1         0.0        0.000000     0.7025        1.00000\n",
+       "2          2           -        1.000000          -        0.92625\n",
+       "3    average         0.5        0.666667   0.436875        0.94125"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "john_drone=np.append(scores_john_drone,np.average(scores_john_drone[:2]))\n",
-    "christin_drone=np.append(scores_cristin_drone,np.average(scores_cristin_drone[:2]))\n",
     "\n",
-    "john_seal=np.append(scores_john_seal,np.average(scores_john_seal[:2]))\n",
-    "christin_seal=np.append(scores_cristin_seal,np.average(scores_cristin_seal[:2]))\n",
+    "john_drone=np.append(scores_john_drone,\"-\")\n",
+    "john_drone=np.append(john_drone,np.average(scores_john_drone[:2]))\n",
+    "christin_drone=np.append(scores_cristin_drone,np.average(scores_cristin_drone[:3]))\n",
     "\n",
+    "john_seal=np.append(scores_john_seal,\"-\")\n",
+    "john_seal=np.append(john_seal,np.average(scores_john_seal[:2]))\n",
+    "christin_seal=np.append(scores_cristin_seal,np.average(scores_cristin_seal[:3]))\n",
     "\n",
-    "d = {'submission':['0','1','average'],'john drone ': john_drone, 'Cristin drone ': christin_drone,'john seal ': john_seal,'Cristin seal ': christin_seal}\n",
+    "d = {'submission':['0','1','2','average'],'john drone ': john_drone, 'Cristin drone ': christin_drone,'john seal ': john_seal,'Cristin seal ': christin_seal}\n",
     "df = pd.DataFrame(data=d)\n",
-    "print(\"Average score \\nJohn: \"+str((john_seal[-1]+john_drone[-1])/2)+\"\\nCristin: \"+str((christin_seal[-1]+christin_drone[-1])/2)+\"\")\n",
     "df"
    ]
   }
@@ -343,14 +348,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   },
   "toc": {
    "base_numbering": 1,
